tests/paczka1/small_fuzzy/68557939.err
Error in line 1: IQQM S574 57,4
Error in line 9: 0Upa S285 46,6
Error in line 11: 0Upa S574 24,1
